--- a/package.json
+++ b/package.json
@@ -44,14 +44,15 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "eslint-config-next": "^16.0.10",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "14.2.16",
+    "next": "^16.0.10",
     "next-themes": "^0.4.4",
     "posthog-js": "^1.206.1",
-    "react": "^18",
+    "react": "^19.2.3",
     "react-day-picker": "8.10.1",
-    "react-dom": "^18",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
@@ -63,8 +64,8 @@
   },
   "devDependencies": {
     "@types/node": "^22",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.2.3",
+    "@types/react-dom": "^19.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
